--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "meyda": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "web-audio-beat-detector": "^8.2.34"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
