--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
     "express": "^5.2.1",
     "firebase": "^12.8.0",
     "lucide-react": "^0.294.0",
-    "meyda": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "web-audio-beat-detector": "^8.2.34"
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
